# GhostFetch

./: .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  config.py  docker-compose.yml  job_manager.py  load_test.py  load_test.sh  main.py  proxies.txt  pyproject.toml  requirements.txt  scraper.py
.github/workflows/: docker-publish.yml  pypi-publish.yml
docs/: advanced_usage.md  mcp_config.json  openai_schema.json
ghostfetch/: __init__.py  cli.py  client.py  fetch.py  mcp_server.py
skills/ghostfetch/: SKILL.md
src/core/: job_manager.py  scraper.py  stealth_utils.py
src/sdk/: client.py
src/utils/: config.py
