[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostfetch"
version = "2026.2.10"
description = "A stealthy headless browser service for AI agents. Bypasses anti-bot protections to fetch content and convert to clean Markdown."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Arsalan Shah", email = "iarsalanshah@gmail.com"}
]
keywords = ["ai-agents", "web-scraping", "stealth", "playwright", "markdown", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "playwright>=1.40.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "requests>=2.31.0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/iArsalanshah/GhostFetch"
Documentation = "https://github.com/iArsalanshah/GhostFetch#readme"
Repository = "https://github.com/iArsalanshah/GhostFetch"
Issues = "https://github.com/iArsalanshah/GhostFetch/issues"

[project.scripts]
ghostfetch = "ghostfetch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ghostfetch*", "src*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json"]
